[project]
name = "nexus-query"
version = "0.5.0"
description = "Agentic RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "langchain>=1.2.10",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-ollama>=1.0.1",
    "langfuse>=3.14.2",
    "llm-guard>=0.3.16",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "UP", # pyupgrade
]

ignore = [
    "E501", # line-too-long
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["nexus_query"]
